Remove old expand module